--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 }
 
 body {
+    margin: 0;
     display: flex;
     justify-content: center;
     background: var(--background);
@@ -49,7 +50,7 @@ body {
     --clip-top: calc(var(--stack-height) * var(--index));
     --clip-bottom: calc(var(--stack-height) * var(--inverse-index));
     clip-path: inset(var(--clip-top) 0 var(--clip-bottom) 0);
-    animation: stack 340ms cubic-bezier(.46, .29, 0, 1.24) 1 backwards calc(var(--index) * 120ms), glitch 2s ease infinite 2s alternate-reverse;
+    animation: stack 340ms cubic-bezier(.46, .29, 0, 1.24) 1 backwards calc(var(--index) * 120ms), glitch 6s ease infinite 2s alternate-reverse;
 }
 
 .stack span:nth-child(odd) {
