--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Mukta:wght@200&family=Raleway:wght@700&display=swap");
-
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400&family=Mukta:wght@200&family=Raleway:wght@700&display=swap");
 * {
   margin: 0;
   padding: 0;
@@ -27,7 +26,6 @@ body {
   margin: 0;
   justify-content: center;
 }
-
 
 .stack {
   display: grid;
@@ -116,14 +114,6 @@ a {
   color: var(--color);
 }
 
-h2#aboutme {
-  font-family: "Raleway", sans-serif;
-  display: grid;
-  grid-template-rows: 1fr;
-  grid-template-columns: 1fr 2fr;
-  place-content: center;
-}
-
 .nav__list {
   font-family: "Raleway", sans-serif;
   display: flex;
@@ -137,4 +127,24 @@ h2#aboutme {
 
 .nav__list--item:not(:first-child) {
   margin-left: 20px;
+}
+
+.text {
+  display: grid;
+  margin-left: 10%;
+  margin-top: 5%;
+  grid-template-columns: 30%;
+  gap: 5%;
+  font-family: "Maven Pro", sans-serif;
+}
+#aboutme {
+  font-family: "Raleway", sans-serif;
+}
+
+#aboutme_ {
+  font-family: "Mukta", sans-serif;
+  letter-spacing: 0.2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
