--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400&family=Mukta:wght@200&family=Raleway:wght@700&display=swap");
 * {
   box-sizing: border-box;
   padding: 0;
@@ -21,11 +22,17 @@ body {
 }
 
 .nav > .nav-header > .nav-title {
-  letter-spacing: 0.1em;
+  font-family: "Raleway", sans-serif;
+  letter-spacing: 0.05em;
   text-align: center;
   font-size: 25px;
   color: #fff;
   padding: 10px 10px 20px 10px;
+}
+
+.nav > .nav-header > .nav-title > a {
+  text-decoration: none;
+  color: white;
 }
 
 .nav > .nav-btn {
@@ -33,6 +40,7 @@ body {
 }
 
 .nav > .nav-links {
+  font-family: "Mukta", sans-serif;
   font-size: 19px;
   display: flex;
   position: absolute;
