--- a/styles.css
+++ b/styles.css
@@ -11,10 +11,11 @@ body {
 }
 
 .nav {
+  background-color: #333;
   height: 50px;
   width: 100%;
   background-color: black;
-  position: relative;
+  position: fixed;
 }
 
 .nav > .nav-header {
