--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,79 @@
   margin: 0;
 }
 
+.black-hole {
+  width: 200px;
+  height: 200px;
+  background-color: transparent;
+  border: 4px solid #fff;
+  border-radius: 50%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  animation: black-hole-pulse 2s ease-in-out infinite;
+  box-shadow: 0 0 20px 15px white;
+  transition: transform 0.3s;
+  z-index: -1;
+}
+
+.black-hole:hover {
+  animation-play-state: paused;
+}
+
+@keyframes black-hole-pulse {
+  0%,
+  100% {
+    width: 200px;
+    height: 200px;
+  }
+  50% {
+    width: 250px;
+    height: 250px;
+  }
+}
+
+.scroll-container {
+  height: 100vh;
+  overflow: auto;
+}
+
+.scroll-content {
+  height: 200px;
+}
+
+.about-me {
+  font-family: "Mukta", sans-serif;
+  padding: 40px;
+  background-color: #333;
+  color: #fff;
+}
+
+.about-me h2 {
+  font-family: "Raleway", sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  margin-bottom: 20px;
+}
+
+.intro-text,
+.mask-text,
+.philosophy-text {
+  font-size: 18px;
+  margin-bottom: 20px;
+}
+
+.mask-text {
+  font-family: "Maven Pro", sans-serif;
+  font-weight: 400;
+}
+
+/* Style links if needed */
+.about-me a {
+  color: #fff;
+  text-decoration: underline;
+}
+
 body {
   margin: 0px;
   background-color: black;
