--- a/index.css
+++ b/index.css
@@ -1,4 +1,4 @@
-/* index.css */
+@import url("https://fonts.googleapis.com/css?family=VT323&display=swap");
 
 body {
   background-color: black;
@@ -25,11 +25,6 @@ body {
   animation: backgroundEffect 5s ease-in-out forwards;
 }
 
-.background:hover {
-  filter: none;
-  opacity: 1;
-}
-
 .tv-image {
   max-width: 100%;
   max-height: 100%;
@@ -43,16 +38,26 @@ body {
     transform: scale(1);
   }
 }
+.centered-text {
+  opacity: 100;
+  font-family: "VT323", monospace;
+  font-size: 22px;
+  color: rgb(4, 199, 4);
+  text-align: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  z-index: 2;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
 
-@keyframes backgroundEffect {
-  0% {
-    filter: blur(5px);
-    opacity: 0;
-  }
-  100% {
-    filter: none;
-    opacity: 1;
-  }
+.centered-text li {
+  margin: 10px;
 }
 
 @keyframes tvImageEffect {
