--- a/index.css
+++ b/index.css
@@ -53,13 +53,34 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   height: 100%;
-  animation: centeredTextEffect 1s linear 3s forwards;
+  animation: centeredTextEffect 0.5s linear 3s forwards;
+  animation-fill-mode: both;
 }
 
 .centered-text li {
   margin: 10px;
+  transition: 0.3s;
+}
+
+.centered-text li:hover {
+  color: rgb(0, 255, 0);
+  transform: scale(1.3);
+}
+
+.centered-image {
+  max-width: 100%;
+  max-height: 100%;
+  display: block;
+  margin-bottom: 5rem;
+  margin-top: 15rem;
+}
+
+@media (prefers-reduced-motion: reduce) {
+  .centered-text {
+    animation: centeredTextEffectReduced 0.1s linear 3s forwards;
+  }
 }
 
 @keyframes tvImageEffect {
@@ -81,5 +102,14 @@ body {
   100% {
     opacity: 1;
     transform: scale(1);
+  }
+}
+
+@keyframes centeredTextEffectReduced {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
   }
 }
