--- a/index.css
+++ b/index.css
@@ -28,7 +28,7 @@ body {
 .tv-image {
   max-width: 100%;
   max-height: 100%;
-  position: relative;
+  position: absolute;
   filter: grayscale(100%);
   transform: scale(1.1);
   transition: filter 0.5s ease, transform 0.5s ease;
@@ -55,7 +55,7 @@ body {
   align-items: center;
   justify-content: flex-start;
   height: 100%;
-  animation: centeredTextEffect 0.5s linear 3s forwards;
+  animation: centeredTextEffect 0.5s linear 3.5s forwards;
   animation-fill-mode: both;
 }
 
@@ -75,6 +75,37 @@ body {
   display: block;
   margin-bottom: 5rem;
   margin-top: 15rem;
+}
+
+.tv-shutdown {
+  width: 40%;
+  height: 40%;
+  position: absolute;
+  background: white;
+  z-index: -1;
+  opacity: 0;
+
+  animation: shutdown 400ms linear 3s forwards;
+  animation-fill-mode: forwards;
+}
+
+@keyframes shutdown {
+  0% {
+    transform: scale3d(1, 1, 1);
+    opacity: 0;
+  }
+  20% {
+    transform: scale3d(1, 1.6, 1);
+    opacity: 0%;
+  }
+  50% {
+    transform: scale3d(1, 0.005, 1);
+    opacity: 50%;
+  }
+  100% {
+    transform: scale3d(0, 0, 1);
+    opacity: 1;
+  }
 }
 
 @media (prefers-reduced-motion: reduce) {
