--- a/index.css
+++ b/index.css
@@ -11,6 +11,13 @@ body {
   position: relative;
 }
 
+@media (max-width: 840px) {
+  .tv-image,
+  .tv-shutdown {
+    display: none;
+  }
+}
+
 .background {
   position: absolute;
   top: 50%;
@@ -42,7 +49,7 @@ body {
 .centered-text {
   opacity: 0;
   font-family: "VT323", monospace;
-  font-size: 22px;
+  font-size: max(1.2vw, 20px);
   color: rgb(4, 199, 4);
   text-align: center;
   list-style: none;
@@ -54,13 +61,14 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
+  top: 30%;
   height: 100%;
   animation: centeredTextEffect 0.5s linear 3.5s forwards;
   animation-fill-mode: both;
 }
 
 .centered-text li {
-  margin: 10px;
+  margin: 2%;
   transition: 0.3s;
 }
 
@@ -70,11 +78,8 @@ body {
 }
 
 .centered-image {
-  max-width: 100%;
-  max-height: 100%;
-  display: block;
-  margin-bottom: 5rem;
-  margin-top: 15rem;
+  width: 70%;
+  height: auto;
 }
 
 .tv-shutdown {
@@ -91,19 +96,19 @@ body {
 
 @keyframes shutdown {
   0% {
-    transform: scale3d(1, 1, 1);
+    transform: scale(100%, 100%);
     opacity: 0;
   }
   20% {
-    transform: scale3d(1, 1.6, 1);
+    transform: scale(100%, 160%);
     opacity: 0%;
   }
   50% {
-    transform: scale3d(1, 0.005, 1);
+    transform: scale(100%, 5%);
     opacity: 50%;
   }
   100% {
-    transform: scale3d(0, 0, 1);
+    transform: scale(0%, 0%);
     opacity: 1;
   }
 }
@@ -117,22 +122,22 @@ body {
 @keyframes tvImageEffect {
   0% {
     filter: grayscale(100%);
-    transform: scale(1.1);
+    transform: scale(110%);
   }
   100% {
     filter: none;
-    transform: scale(1);
+    transform: scale(100%);
   }
 }
 
 @keyframes centeredTextEffect {
   0% {
     opacity: 0;
-    transform: scale(0.8);
+    transform: scale(80%);
   }
   100% {
     opacity: 1;
-    transform: scale(1);
+    transform: scale(100%);
   }
 }
 
