--- a/index.css
+++ b/index.css
@@ -36,14 +36,15 @@ body {
   max-width: 100%;
   max-height: 100%;
   position: absolute;
-  filter: grayscale(100%);
-  transform: scale(1.1);
   transition: filter 0.5s ease, transform 0.5s ease;
+}
+
+.tv-animation {
   animation: tvImageEffect 3s ease-in-out forwards;
-  &:hover {
-    filter: none;
-    transform: scale(1);
-  }
+}
+
+.shutdown-animation {
+  animation: shutdown 400ms linear 3s forwards;
 }
 
 .centered-text {
@@ -89,9 +90,6 @@ body {
   background: white;
   z-index: -1;
   opacity: 0;
-
-  animation: shutdown 400ms linear 3s forwards;
-  animation-fill-mode: forwards;
 }
 
 @keyframes shutdown {
