--- a/index.css
+++ b/index.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css?family=VT323&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap");
 
 @media (max-width: 840px) {
   .tv-image,
@@ -12,7 +13,7 @@ body {
 }
 .container {
   display: grid;
-  grid-template-columns: 0.9fr 1.3fr 0.8fr;
+  grid-template-columns: 0.8fr 1.3fr 0.8fr;
   grid-template-rows: 3fr 0.9fr 1.2fr 1.4fr 0.5fr;
   gap: 5% 0px;
   grid-auto-flow: row;
@@ -83,7 +84,14 @@ body {
 }
 
 .About-me {
+  background-color: blueviolet;
   grid-area: About-me;
+}
+
+.About-me h2 {
+  font-family: "Poppins";
+  font-weight: 700;
+  padding-left: 3rem;
 }
 
 .Projects {
