--- a/index.css
+++ b/index.css
@@ -13,13 +13,13 @@ body {
 }
 .container {
   display: grid;
-  grid-template-columns: 0.8fr 1.3fr 0.8fr;
-  grid-template-rows: 3fr 0.9fr 1.2fr 1.4fr 0.5fr;
-  gap: 5% 0px;
+  grid-template-columns: 1.4fr 0.8fr 0.8fr;
+  grid-template-rows: 1fr 0.3fr 1.2fr 1.4fr 0.5fr;
+  gap: 1% 0px;
   grid-auto-flow: row;
   grid-template-areas:
     "TV-Section TV-Section TV-Section"
-    "About-me About-me About-me"
+    "About-me Gas-Cave Gas-Cave"
     "Projects Projects ."
     "Artwork Artwork Artwork"
     ". Contact .";
@@ -63,6 +63,7 @@ body {
   animation: centeredTextEffect 0.3s linear 1.4s forwards;
   animation-fill-mode: both;
   margin-bottom: 10%;
+  z-index: 3;
 }
 
 .centered-text li {
@@ -84,14 +85,42 @@ body {
 }
 
 .About-me {
-  background-color: blueviolet;
+  background-color: black;
   grid-area: About-me;
+  color: white;
+  padding-top: 10%;
+  font-family: "Poppins";
+  padding-left: 3rem;
 }
 
 .About-me h2 {
-  font-family: "Poppins";
   font-weight: 700;
-  padding-left: 3rem;
+}
+
+.About-me p {
+  font-weight: 300;
+}
+
+.Gas-Cave {
+  grid-area: Gas-Cave;
+  background-color: black;
+  display: flex;
+  justify-content: center;
+  text-align: justify;
+  flex-direction: column;
+  align-items: center;
+  color: white;
+  font-family: "Poppins";
+  font-weight: 300;
+}
+
+.Gas-Cave img {
+  max-width: 90%;
+  max-height: 90%;
+}
+.Gas-Cave a {
+  font-size: 12px;
+  text-align: center;
 }
 
 .Projects {
