--- a/index.css
+++ b/index.css
@@ -15,6 +15,16 @@
 body {
   background-color: black;
 }
+
+.hidden {
+  opacity: 0;
+  transition: all 2s;
+}
+
+.show {
+  opacity: 1;
+}
+
 .container {
   display: grid;
   grid-template-columns: 1.4fr 0.8fr 0.8fr;
