--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css?family=VT323&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap");
 
-@media (max-width: 840px) {
+@media screen and (max-width: 840px) {
   .tv-image,
   .tv-shutdown {
     display: none;
@@ -247,6 +247,78 @@ body {
   padding-left: 3rem;
   margin-right: 3rem;
   margin-bottom: 10%;
+}
+
+.gallery {
+  box-sizing: border-box;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0px 100px;
+  justify-content: center;
+  height: 4vh;
+}
+
+.col-grid {
+  flex: 50%;
+  max-width: 32%;
+  padding: 0px 5px;
+}
+
+.col-grid img {
+  margin-top: 8px;
+  vertical-align: middle;
+  width: 100%;
+  cursor: pointer;
+  transition: all 0.5s;
+}
+
+.col-grid img:hover {
+  transform: scale(1.1);
+}
+
+.modal {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  padding: 10px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.7);
+}
+
+.modal.open {
+  display: block;
+}
+
+.modal-content {
+  display: block;
+  margin: 0 auto;
+  max-width: 80%;
+  max-height: 80%;
+}
+
+.close {
+  position: absolute;
+  top: 20px;
+  right: 30px;
+  font-size: 30px;
+  cursor: pointer;
+  color: white;
+}
+
+.cross {
+  font-size: 30px;
+  cursor: pointer;
+  color: white;
+  background-color: transparent;
+  background-repeat: no-repeat;
+  border: none;
+  cursor: pointer;
+  overflow: hidden;
+  outline: none;
 }
 
 .Contact {
