--- a/index.css
+++ b/index.css
@@ -123,6 +123,11 @@ body {
   transition: 0.3s;
 }
 
+.centered-text li a {
+  text-decoration: none;
+  color: inherit;
+}
+
 .centered-text li:hover {
   color: rgb(0, 255, 0);
   transform: scale(1.3);
@@ -249,7 +254,6 @@ body {
   font-family: "Poppins";
   padding-left: 3rem;
   margin-right: 3rem;
-  margin-bottom: 10%;
 }
 
 .gallery {
@@ -324,8 +328,25 @@ body {
   outline: none;
 }
 
+#last-child {
+  margin-bottom: 20%;
+}
+
 .Contact {
   grid-area: Contact;
+  margin-left: -50px;
+  margin-top: 20%;
+  margin-bottom: 50%;
+}
+
+.instagram {
+  margin-left: -10px;
+  color: rgb(0, 180, 0);
+  text-decoration: none;
+  transition: all 0.5s;
+}
+.instagram:hover {
+  color: rgb(0, 255, 0);
 }
 
 @keyframes shutdown {
