--- a/index.css
+++ b/index.css
@@ -1,6 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=VT323&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300;700&display=swap");
 
+@media screen and (max-width: 1200px) {
+  .col-grid {
+    min-width: 80%;
+  }
+}
+
 @media screen and (max-width: 840px) {
   .tv-image,
   .tv-shutdown {
@@ -254,6 +260,7 @@ body {
   font-family: "Poppins";
   padding-left: 3rem;
   margin-right: 3rem;
+  margin-top: 3rem;
 }
 
 .gallery {
