--- a/index.css
+++ b/index.css
@@ -27,17 +27,31 @@ body {
 
 .hidden {
   opacity: 0;
-  transition: all 2s;
+  filter: blur(4px);
+  transition: all 1s;
+}
+
+.hidden-effect {
+  opacity: 0;
+  transition: all 1s;
+  transform: translateY(-20%);
 }
 
 @media (prefers-reduced-motion) {
-  .hidden {
+  .hidden,
+  .hidden-effect {
     transition: none;
   }
 }
 
 .show {
   opacity: 1;
+  filter: blur(0);
+}
+
+.show-effect {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 .tv-transition {
